shortened line lengths for browsers Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@10 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/tutorial/part1/index.html
+++ b/www/tutorial/part1/index.html
@@ -29,10 +29,10 @@ public class ProgrammingLanguageBrowser {
 
     public ProgrammingLanguageBrowser() {
         <font color="#FF3333">languages = new BasicEventList();</font>
-        <font color="#FF3333">languages.add(</font>new ProgrammingLanguage("Java", "1995", "Object-oriented virtual machine language by Sun Microsystems")<font color="#FF3333">)</font>;
-        <font color="#FF3333">languages.add(</font>new ProgrammingLanguage("C", "1973", "The UNIX language originally developed for the PDP-11")<font color="#FF3333">)</font>;
+        <font color="#FF3333">languages.add(</font>new ProgrammingLanguage("Java", "1995", ...)<font color="#FF3333">)</font>;
+        <font color="#FF3333">languages.add(</font>new ProgrammingLanguage("C", "1973", ...)<font color="#FF3333">)</font>;
         ...
-        <font color="#FF3333">languages.add(</font>new ProgrammingLanguage("Visual Basic", "1992", "QuickBasic with a visual UI designer")<font color="#FF3333">)</font>;
+        <font color="#FF3333">languages.add(</font>new ProgrammingLanguage("Visual Basic", "1992", ...)<font color="#FF3333">)</font>;
     }
 ...</code></pre></td></tr></table>
 
