--- a/www/tutorial/part5/index.html
+++ b/www/tutorial/part5/index.html
@@ -114,11 +114,11 @@ have collapsed all values into a single column, we need to update the
         
         JFrame frame = new JFrame("Programming Languages");
         frame.getContentPane().setLayout(new GridBagLayout());
-        frame.getContentPane().add(new JLabel("Filter"), new GridBagConstraints(...));
-        frame.getContentPane().add(filteredLanguages.getFilterEdit(), new GridBagConstraints(...));
-        frame.getContentPane().add(customFilteredLanguages.getObjectOrientedCheckBox(), new GridBagConstraints(...));
-        frame.getContentPane().add(customFilteredLanguages.getVirtualMachineCheckBox(), new GridBagConstraints(...));
-        frame.getContentPane().add(listTable.getTableScrollPane(), new GridBagConstraints(...));
+        frame.getContentPane().add(new JLabel("Filter"), ...);
+        frame.getContentPane().add(filteredLanguages.getFilterEdit(), ...);
+        frame.getContentPane().add(customFilteredLanguages.getObjectOrientedCheckBox(), ...);
+        frame.getContentPane().add(customFilteredLanguages.getVirtualMachineCheckBox(), ...);
+        frame.getContentPane().add(listTable.getTableScrollPane(), ...);
         frame.setSize(640, 480);
         frame.show();
     }</code></pre></td></tr></table>
