--- a/www/tutorial/part7/index.html
+++ b/www/tutorial/part7/index.html
@@ -43,11 +43,11 @@ application.
         
         JFrame frame = new JFrame("Programming Languages");
         frame.getContentPane().setLayout(new GridBagLayout());
-        frame.getContentPane().add(new JLabel("Filter"), new GridBagConstraints(...));
-        frame.getContentPane().add(filteredLanguages.getFilterEdit(), new GridBagConstraints(...));
-        frame.getContentPane().add(customFilteredLanguages.getObjectOrientedCheckBox(), new GridBagConstraints(...));
-        frame.getContentPane().add(customFilteredLanguages.getVirtualMachineCheckBox(), new GridBagConstraints(...));
-        frame.getContentPane().add(<font color="#FF3333">new JComboBox(listCombo)</font>, new GridBagConstraints(...));
+        frame.getContentPane().add(new JLabel("Filter"), ...);
+        frame.getContentPane().add(filteredLanguages.getFilterEdit(), ...);
+        frame.getContentPane().add(customFilteredLanguages.getObjectOrientedCheckBox(), ...);
+        frame.getContentPane().add(customFilteredLanguages.getVirtualMachineCheckBox(), ...);
+        frame.getContentPane().add(<font color="#FF3333">new JComboBox(listCombo)</font>, ...);
         frame.setSize(640, 480);
         frame.show();
     }</code</pre></td></tr></table>
