update with better index Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@11 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/tutorial/part1/index.html
+++ b/www/tutorial/part1/index.html
@@ -114,6 +114,7 @@ as a <code>JComboBox</code>, that is now straightforward as well.
 <th align="left" width="30%"><br></th> 
 <th align="center" width="40%"><a href="../index.html">Tutorial Home</a></th>
 <th align="right" width="30%"><a href="../part2/index.html">Part 2 - Text Filtering &gt;&gt;</a></th>
+</tr></table><br><br><br>
 
 </body>
 </html>
