--- a/www/tutorial/part3/index.html
+++ b/www/tutorial/part3/index.html
@@ -124,6 +124,7 @@ date, magnitude, owner or even a regular expression.
 <th align="left" width="30%"><a href="../part2/index.html">&lt;&lt; Part 2 - Text Filtering</a></th> 
 <th align="center" width="40%"><a href="../index.html">Tutorial Home</a></th>
 <th align="right" width="30%"><a href="../part4/index.html">Part 4 - Sorting &gt;&gt;</a></th>
+</tr></table><br><br><br>
 
 </body>
 </html>
