--- a/www/tutorial/part4/index.html
+++ b/www/tutorial/part4/index.html
@@ -114,6 +114,8 @@ create an instance and add <code>Comparator</code>s as necessary.
 <th align="left" width="30%"><a href="../part3/index.html">&lt;&lt; Part 3 - Custom Filtering</a></th> 
 <th align="center" width="40%"><a href="../index.html">Tutorial Home</a></th>
 <th align="right" width="30%"><a href="../part5/index.html">Part 5 - Custom Renderers &gt;&gt;</a></th>
+</tr></table><br><br><br>
+
 
 </body>
 </html>
