--- a/www/tutorial/part6/index.html
+++ b/www/tutorial/part6/index.html
@@ -168,6 +168,7 @@ replacement query to continue.
 <th align="left" width="30%"><a href="../part5/index.html">&lt;&lt; Part 5 - Custom Renderers</a></th> 
 <th align="center" width="40%"><a href="../index.html">Tutorial Home</a></th>
 <th align="right" width="30%"><a href="../part7/index.html">Part 7 - JComboBox &gt;&gt;</a></th>
+</tr></table><br><br><br>
 
 </body>
 </html>
