--- a/www/tutorial/part7/index.html
+++ b/www/tutorial/part7/index.html
@@ -65,6 +65,7 @@ other developers can use it!
 <th align="left" width="30%"><a href="../part6/index.html">&lt;&lt; Part 6 - Query Lists</a></th> 
 <th align="center" width="40%"><a href="../index.html">Tutorial Home</a></th>
 <th align="right" width="30%"><br></th>
+</tr></table><br><br><br>
 
 </body>
 </html>
