--- a/www/tutorial/part2/index.html
+++ b/www/tutorial/part2/index.html
@@ -97,6 +97,7 @@ to check out Part 3 for custom filters.
 <th align="left" width="30%"><a href="../part1/index.html">&lt;&lt; Part 1 - Basics</a></th> 
 <th align="center" width="40%"><a href="../index.html">Tutorial Home</a></th>
 <th align="right" width="30%"><a href="../part3/index.html">Part 3 - Custom Filtering &gt;&gt;</a></th>
+</tr></table><br><br><br>
 
 </body>
 </html>
