--- a/www/tutorial/part5/index.html
+++ b/www/tutorial/part5/index.html
@@ -130,6 +130,7 @@ have collapsed all values into a single column, we need to update the
 <th align="left" width="30%"><a href="../part4/index.html">&lt;&lt; Part 4 - Sorting</a></th> 
 <th align="center" width="40%"><a href="../index.html">Tutorial Home</a></th>
 <th align="right" width="30%"><a href="../part6/index.html">Part 6 - Query Lists &gt;&gt;</a></th>
+</tr></table><br><br><br>
 
 </body>
 </html>
