--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
 <h1><a href="https://glazedlists.dev.java.net/files/documents/1073/1671/glazedlists.jar">Demo</a></h1>
 <p>Execute the Glazed Lists jar file for a simple demo.
 
-<h1><a href="tutorial/index.html">Glazed Lists Tutorial</a> 
+<h1><a href="tutorial/index.html">Glazed Lists Tutorial</a></h1>
 <p>A quick guide to get you up-and-running with Glazed Lists in your Java application.
 
 <br><br><br>
