added a picture to the main page Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@16 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
 
 <h1><a href="https://glazedlists.dev.java.net/files/documents/1073/1671/glazedlists.jar">Demo</a></h1>
 <p>Execute the Glazed Lists jar file for a simple demo.
-
+<p><img src="/tutorial/part5/screenshot.gif" width="431" height="273" alt="Screenshot of Glazed Lists Demo">
 <h1><a href="tutorial/index.html">Glazed Lists Tutorial</a></h1>
 <p>A quick guide to get you up-and-running with Glazed Lists in your Java application.
 
