--- a/www/tutorial/index.html
+++ b/www/tutorial/index.html
@@ -15,6 +15,7 @@ A quick guide to get you up-and-running with Glazed Lists in your Java applicati
 <p><a href="part5/index.html">Part 5 - Custom Renderers:</a> display your data so it is easy to read.
 <p><a href="part6/index.html">Part 6 - Query Lists:</a> use a dynamic backend for the lists.
 <p><a href="part7/index.html">Part 7 - JComboBox:</a> replace the JTable widget with a ComboBox.
+<p><a href="part8/index.html">Part 8 - Performance Tuning:</a> squeeze out more performance.
 
 <h3>Tutorial Source Code</h3>
 
