--- a/www/tutorial/part7/index.html
+++ b/www/tutorial/part7/index.html
@@ -64,7 +64,7 @@ other developers can use it!
 <br><br><p><table cellpadding="0" cellspacing="0" width="100%" border="0"><tr>
 <th align="left" width="30%"><a href="../part6/index.html">&lt;&lt; Part 6 - Query Lists</a></th> 
 <th align="center" width="40%"><a href="../index.html">Tutorial Home</a></th>
-<th align="right" width="30%"><br></th>
+<th align="right" width="30%"><a href="../part8/index.html">Part 8 - Performance Tuning &gt;&gt;</a></th>
 </tr></table><br><br><br>
 
 </body>
