--- a/www/sightings/index.html
+++ b/www/sightings/index.html
@@ -7,6 +7,7 @@
 application that we can feature here please let us know via our 
 <a href="mailto:users@glazedlists.dev.java.net?subject=Glazed Lists Sightings">users mailing list</a>.
 
+<div class="h3" id="longdescription">
 
 <p><h3>Jobs: The O'Dell Business System</h3>
 <p><a href=""><a href="jobs.png"><img src="jobs-small.png" width="400" height="238" alt="O'Dell Business System" align="center" border="3"></a>
