--- a/www/sightings/index.html
+++ b/www/sightings/index.html
@@ -1,14 +1,13 @@
 <html>
 <head><title>Glazed Lists Sightings</title></head>
 <body>
+<div class="h3" id="longdescription">
 
 <h1>Glazed Lists Sightings</h1>
 <p>This is a showcase of what is possible with Glazed Lists. If you have an
 application that we can feature here please let us know via our 
 <a href="mailto:users@glazedlists.dev.java.net?subject=Glazed Lists Sightings">users mailing list</a>.
 
-<div class="h3" id="longdescription">
- <div id="projecthome" class="app">
 
 <p><h3>Jobs: The O'Dell Business System</h3>
 <p><a href=""><a href="jobs.png"><img src="jobs-small.png" width="400" height="238" alt="O'Dell Business System" align="center" border="3"></a>
@@ -16,5 +15,5 @@ application that we can feature here please let us know via our
 This is the application that Glazed Lists was created for! It uses Glazed Lists almost everywhere to manage
 lists of contacts, tasks and products. 
 
-
+</div>
 </body></html>
