--- a/www/tutorial/index.html
+++ b/www/tutorial/index.html
@@ -3,6 +3,7 @@
 <link REL ="stylesheet" TYPE="text/css" HREF="../stylesheet.css" TITLE="Style">
 </head>
 <body>
+<div class="h3" id="longdescription">
 
 <h1>Glazed Lists Tutorial</h1>
 
@@ -25,5 +26,6 @@ your JDBC driver on your classpath.
 
 <br><br><br>
 
+</div>
 </body>
 </html>
