messing with css
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@71 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/tutorial/index.html
+++ b/www/tutorial/index.html
@@ -1,6 +1,6 @@
 <html>
 <head><title>Glazed Lists Tutorial</title>
-<link REL ="stylesheet" TYPE="text/css" HREF="../stylesheet.css" TITLE="Style">
+<!--<link REL ="stylesheet" TYPE="text/css" HREF="../stylesheet.css" TITLE="Style">-->
 </head>
 <body>
 <div class="h3" id="longdescription">
