--- a/www/tutorial/index.html
+++ b/www/tutorial/index.html
@@ -18,7 +18,7 @@ A quick guide to get you up-and-running with Glazed Lists in your Java applicati
 <p><a href="part7/index.html">Part 7 - JComboBox:</a> replace the JTable widget with a ComboBox.
 <p><a href="part8/index.html">Part 8 - Performance Tuning:</a> squeeze out more performance.
 
-<h3>Tutorial Source Code</h3>
+<p><h3>Tutorial Source Code</h3>
 
 Download, review and test <a href="https://glazedlists.dev.java.net/files/documents/1073/1670/glazedlists-tutorial.zip">glazedlists-tutorial.zip</a>.
 You will need <a href="https://glazedlists.dev.java.net/files/documents/1073/1671/glazedlists.jar">glazedlists.jar</a> on your classpath. For parts six and seven, you will also need
