messing with css
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@73 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/sightings/index.html
+++ b/www/sightings/index.html
@@ -1,7 +1,8 @@
 <html>
 <head><title>Glazed Lists Sightings</title></head>
 <body>
-<div class="h3" id="longdescription">
+<div class="app">
+
 
 <h1>Glazed Lists Sightings</h1>
 <p>This is a showcase of what is possible with Glazed Lists. If you have an
