--- a/www/tutorial/index.html
+++ b/www/tutorial/index.html
@@ -3,7 +3,7 @@
 <!--<link REL ="stylesheet" TYPE="text/css" HREF="../stylesheet.css" TITLE="Style">-->
 </head>
 <body>
-<div class="h3" id="longdescription">
+<div class="app">
 
 <h1>Glazed Lists Tutorial</h1>
 
