messing with css
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@74 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/tutorial/index.html
+++ b/www/tutorial/index.html
@@ -19,8 +19,7 @@ A quick guide to get you up-and-running with Glazed Lists in your Java applicati
 <p><a href="part8/index.html">Part 8 - Performance Tuning:</a> squeeze out more performance.
 
 <p><h3>Tutorial Source Code</h3>
-
-Download, review and test <a href="https://glazedlists.dev.java.net/files/documents/1073/1670/glazedlists-tutorial.zip">glazedlists-tutorial.zip</a>.
+<p>Download, review and test <a href="https://glazedlists.dev.java.net/files/documents/1073/1670/glazedlists-tutorial.zip">glazedlists-tutorial.zip</a>.
 You will need <a href="https://glazedlists.dev.java.net/files/documents/1073/1671/glazedlists.jar">glazedlists.jar</a> on your classpath. For parts six and seven, you will also need
 your JDBC driver on your classpath.
 
