messing with css
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@75 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/tutorial/part2/index.html
+++ b/www/tutorial/part2/index.html
@@ -1,8 +1,8 @@
 <html>
 <head><title>Glazed Lists Tutorial Part 2 - Text Filtering</title>
-<link REL ="stylesheet" TYPE="text/css" HREF="../../stylesheet.css" TITLE="Style">
 </head>
 <body>
+<div class="app">
 
 <h3>Glazed Lists Tutorial</h3>
 <h1>Part 2 - Text Filtering</h1>
@@ -99,5 +99,6 @@ to check out Part 3 for custom filters.
 <th align="right" width="30%"><a href="../part3/index.html">Part 3 - Custom Filtering &gt;&gt;</a></th>
 </tr></table><br><br><br>
 
+</div>
 </body>
 </html>
