--- a/www/tutorial/part4/index.html
+++ b/www/tutorial/part4/index.html
@@ -1,8 +1,8 @@
 <html>
 <head><title>Glazed Lists Tutorial Part 4 - Sorting</title>
-<link REL ="stylesheet" TYPE="text/css" HREF="../../stylesheet.css" TITLE="Style">
 </head>
 <body>
+<div class="app">
 
 <h3>Glazed Lists Tutorial</h3>
 <h1>Part 4 - Sorting</h1>
@@ -116,6 +116,6 @@ create an instance and add <code>Comparator</code>s as necessary.
 <th align="right" width="30%"><a href="../part5/index.html">Part 5 - Custom Renderers &gt;&gt;</a></th>
 </tr></table><br><br><br>
 
-
+</div>
 </body>
 </html>
