--- a/www/tutorial/part8/index.html
+++ b/www/tutorial/part8/index.html
@@ -1,8 +1,8 @@
 <html>
 <head><title>Glazed Lists Tutorial Part 8 - Performance Tuning</title>
-<link REL ="stylesheet" TYPE="text/css" HREF="../../stylesheet.css" TITLE="Style">
 </head>
 <body>
+<div class="app">
 
 <h3>Glazed Lists Tutorial</h3>
 <h1>Part 8 - Performance Tuning</h1>
@@ -80,5 +80,6 @@ application will have a memory leak.
 <th align="right" width="30%"><br></th>
 </tr></table><br><br><br>
 
+</div>
 </body>
 </html>
