--- a/www/tutorial/part1/index.html
+++ b/www/tutorial/part1/index.html
@@ -1,8 +1,8 @@
 <html>
 <head><title>Glazed Lists Tutorial Part 1 - Basics</title>
-<link REL ="stylesheet" TYPE="text/css" HREF="../../stylesheet.css" TITLE="Style">
 </head>
 <body>
+<div class="app">
 
 <h3>Glazed Lists Tutorial</h3>
 <h1>Part 1 - Basics</h1>
@@ -116,5 +116,6 @@ as a <code>JComboBox</code>, that is now straightforward as well.
 <th align="right" width="30%"><a href="../part2/index.html">Part 2 - Text Filtering &gt;&gt;</a></th>
 </tr></table><br><br><br>
 
+</div>
 </body>
 </html>
