--- a/www/tutorial/part3/index.html
+++ b/www/tutorial/part3/index.html
@@ -1,8 +1,9 @@
 <html>
 <head><title>Glazed Lists Tutorial Part 3 - Custom Filtering</title>
-<link REL ="stylesheet" TYPE="text/css" HREF="../../stylesheet.css" TITLE="Style">
 </head>
 <body>
+<div class="app">
+
 
 <h3>Glazed Lists Tutorial</h3>
 <h1>Part 3 - Custom Filtering</h1>
@@ -126,5 +127,6 @@ date, magnitude, owner or even a regular expression.
 <th align="right" width="30%"><a href="../part4/index.html">Part 4 - Sorting &gt;&gt;</a></th>
 </tr></table><br><br><br>
 
+</div>
 </body>
 </html>
