--- a/www/tutorial/part5/index.html
+++ b/www/tutorial/part5/index.html
@@ -1,8 +1,9 @@
 <html>
 <head><title>Glazed Lists Tutorial Part 5 - Custom Renderers</title>
-<link REL ="stylesheet" TYPE="text/css" HREF="../../stylesheet.css" TITLE="Style">
 </head>
 <body>
+<div class="app">
+
 
 <h3>Glazed Lists Tutorial</h3>
 <h1>Part 5 - Custom Renderers</h1>
@@ -132,5 +133,6 @@ have collapsed all values into a single column, we need to update the
 <th align="right" width="30%"><a href="../part6/index.html">Part 6 - Query Lists &gt;&gt;</a></th>
 </tr></table><br><br><br>
 
+</div>
 </body>
 </html>
