--- a/www/tutorial/part6/index.html
+++ b/www/tutorial/part6/index.html
@@ -1,8 +1,8 @@
 <html>
 <head><title>Glazed Lists Tutorial Part 6 - Query Lists</title>
-<link REL ="stylesheet" TYPE="text/css" HREF="../../stylesheet.css" TITLE="Style">
 </head>
 <body>
+<div class="app">
 
 <h3>Glazed Lists Tutorial</h3>
 <h1>Part 6 - Query Lists</h1>
@@ -170,5 +170,6 @@ replacement query to continue.
 <th align="right" width="30%"><a href="../part7/index.html">Part 7 - JComboBox &gt;&gt;</a></th>
 </tr></table><br><br><br>
 
+</div>
 </body>
 </html>
