--- a/www/tutorial/part7/index.html
+++ b/www/tutorial/part7/index.html
@@ -1,8 +1,8 @@
 <html>
 <head><title>Glazed Lists Tutorial Part 7 - JComboBox</title>
-<link REL ="stylesheet" TYPE="text/css" HREF="../../stylesheet.css" TITLE="Style">
 </head>
 <body>
+<div class="app">
 
 <h3>Glazed Lists Tutorial</h3>
 <h1>Part 7 - JComboBox</h1>
@@ -67,5 +67,6 @@ other developers can use it!
 <th align="right" width="30%"><a href="../part8/index.html">Part 8 - Performance Tuning &gt;&gt;</a></th>
 </tr></table><br><br><br>
 
+</div>
 </body>
 </html>
