added sightings link
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@76 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/index.html
+++ b/www/index.html
@@ -18,9 +18,12 @@
 <p><img src="sourcesortfilterdisplay.gif" width="600" height="463" alt="source / sort / filter / display">
 
 
-<p><h3>Demo</h3>
-<p>Execute the <a href="/files/documents/1073/1671/glazedlists.jar">Glazed Lists jar file</a> for a simple demo.
+<p><h3>See it in Action</h3>
 <p><img src="/tutorial/part5/screenshot.gif" width="431" height="273" alt="Screenshot of Glazed Lists Demo">
+<ul>
+  <li><a href="/files/documents/1073/1671/glazedlists.jar">Demo</a> - execute the Glazed Lists jar file for a simple demo.
+  <li><a href="/sightings/index.html">Sightings</a> - screenshots of applications using Glazed Lists
+</ul>
 
 
 <p><h3>Download</h3>
