--- a/www/sightings/index.html
+++ b/www/sightings/index.html
@@ -11,7 +11,7 @@ application that we can feature here please let us know via our
 
 
 <p><h3>Jobs: The O'Dell Business System</h3>
-<p><a href=""><a href="jobs.png"><img src="jobs-small.png" width="400" height="238" alt="O'Dell Business System" align="center" border="3"></a>
+<p><a href=""><a href="jobs.png"><img src="jobs-small.png" width="400" height="238" alt="Jobs: The O'Dell Business System" align="center" border="3"></a>
 <p><a href="http://www.odellengineeringltd.com/">O'Dell Engineering Ltd.</a>'s J2EE business management system is Jobs.
 This is the application that Glazed Lists was created for! It uses Glazed Lists almost everywhere to manage
 lists of contacts, tasks and products. 
