removed link to sightings which is offline indefinitely Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@78 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
 <p><img src="/tutorial/part5/screenshot.gif" width="431" height="273" alt="Screenshot of Glazed Lists Demo">
 <ul>
   <li><a href="/files/documents/1073/1671/glazedlists.jar">Demo</a> - execute the Glazed Lists jar file for a simple demo.
-  <li><a href="/sightings/index.html">Sightings</a> - screenshots of applications using Glazed Lists
+  <!--<li><a href="/sightings/index.html">Sightings</a> - screenshots of applications using Glazed Lists-->
 </ul>
 
 
