--- a/www/tutorial/index.html
+++ b/www/tutorial/index.html
@@ -16,6 +16,7 @@ A quick guide to get you up-and-running with Glazed Lists in your Java applicati
 <p><a href="part6/index.html">Part 6 - Query Lists:</a> use a dynamic backend for the lists.
 <p><a href="part7/index.html">Part 7 - JComboBox:</a> replace the JTable widget with a ComboBox.
 <p><a href="part8/index.html">Part 8 - Performance Tuning:</a> squeeze out more performance.
+<p><a href="part9/index.html">Part 9 - JList:</a> another widget for displaying lists.
 
 <p><h3>Tutorial Source Code</h3>
 <p>Download, review and test <a href="https://glazedlists.dev.java.net/files/documents/1073/1670/glazedlists-tutorial.zip">glazedlists-tutorial.zip</a>.
