--- a/www/tutorial/part8/index.html
+++ b/www/tutorial/part8/index.html
@@ -77,7 +77,7 @@ application will have a memory leak.
 <br><br><p><table cellpadding="0" cellspacing="0" width="100%" border="0"><tr>
 <th align="left" width="30%"><a href="../part7/index.html">&lt;&lt; Part 7 - JComboBox</a></th> 
 <th align="center" width="40%"><a href="../index.html">Tutorial Home</a></th>
-<th align="right" width="30%"><br></th>
+<th align="right" width="30%"><a href="../part9/index.html">Part 9 - JList &gt;&gt;</a></th>
 </tr></table><br><br><br>
 
 </div>
