--- a/www/tutorial/part4/index.html
+++ b/www/tutorial/part4/index.html
@@ -17,8 +17,12 @@ guess, sorting Strings alphabetically and dates chronologically. Suppose that yo
 contains names like "Jesse Wilson" and "Phil O'Dell". TableSorter will sort by the entire
 String rather than by surname.
 
-<p>Glazed Lists sorting was inspired by TableSorter. The header-clicking actions
-works just as expected and the layered models is very powerful.
+<p>Glazed Lists sorting was inspired by TableSorter. But Glazed Lists has some additional
+features to make your application more powerful:
+<li>Sort order arrow icons in the headers indicate which column you are sorting by. There are
+arrow icons that match the look and feel if you use Metal, Windows or Mac OS X Aqua. 
+<li>Multiple column sort allows you to select a list of columns to sort by. The list is sorted
+by the first column and 'ties' are broken by sorting on subsequent columns.
 
 <h3>Creating Comparators</h3>
 <p>For our tutorial, we are going to enable the user to sort by the name or year
@@ -86,15 +90,21 @@ an object became un-filtered, we would need to re-sort it into the list.
 <p>Currently we have sorted our list by name, but what if the user wants to sort by
 year? We need to create a bridge from the <code>ListTable</code> to the
 <code>SortedList</code> so that clicking on the table headers changes the sort
-criteria. The bridge is called <code>TableComparatorSelector</code>, and we simply
-create an instance and add <code>Comparator</code>s as necessary.
+criteria. The bridge is called <code>TableComparatorChooser</code>, and we simply
+create an instance and set <code>Comparator</code>s as necessary. Because the
+<code>TableComparatorChooser</code> supports multiple sort orders for each column,
+each column has a <code>List</code> for specifying which <code>Comparator</code>(s)
+to choose from. A default <code>Comparable</code> is provided which sorts the column
+by its value, providing that value implements <code>Comparable</code>.
 
 <p><table cellpadding="5" cellspacing="0" width="100%" border="1" bgcolor="#EEEEEE"><tr><td><pre><code>    public void display() {
         ListTable listTable = new ListTable(customFilteredLanguages, new ProgrammingLanguageTableCell());
         
-        <font color="#FF3333">TableComparatorSelector sortSelect = new TableComparatorSelector(listTable, sortedLanguages);</font>
-        <font color="#FF3333">sortSelect.addComparator(0, "(sorted)", sortByName);</font>
-        <font color="#FF3333">sortSelect.addComparator(1, "(sorted)", sortByYear);</font>
+        <font color="#FF3333">TableComparatorChooser tableSorter = new TableComparatorChooser(listTable, sortedLanguages, false);</font>
+        <font color="#FF3333">tableSorter.getComparatorsForColumn(0).clear();</font>
+        <font color="#FF3333">tableSorter.getComparatorsForColumn(0).add(new ProgrammingLanguageNameComparator());</font>
+        <font color="#FF3333">tableSorter.getComparatorsForColumn(1).clear();</font>
+        <font color="#FF3333">tableSorter.getComparatorsForColumn(1).add(new ProgrammingLanguageYearComparator());</font>
         
         JFrame frame = new JFrame("Programming Languages");
         frame.getContentPane().setLayout(new GridBagLayout());
