linked in demo Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@131 696c4f5c-992c-4387-df9e-f6c076136008

--- a/www/demo.html
+++ b/www/demo.html
@@ -1,8 +1,8 @@
 <html>
-<head><title>Demo: Programming Language Browser</title></head>
+<head><title>Programming Language Browser Demo</title></head>
 <body>
 
-<p><h3>Demo: Programming Language Browser</h3>
+<p><h3>Programming Language Browser Demo</h3>
 
 <p>The programming language browser is a very simple application that
 demonstrates Glazed Lists' filtering, sorting and custom renderers.
