--- a/www/index.html
+++ b/www/index.html
@@ -19,9 +19,9 @@
 
 
 <p><h3>See it in Action</h3>
-<p><img src="/tutorial/part5/screenshot.gif" width="431" height="273" alt="Screenshot of Glazed Lists Demo">
+<p><a href="/demo.html"><img src="/tutorial/part5/screenshot.gif" width="431" height="273" alt="Screenshot of Glazed Lists Demo"></a>
 <ul>
-  <li><a href="/files/documents/1073/1671/glazedlists.jar">Demo</a> - execute the Glazed Lists jar file for a simple demo.
+  <li><a href="/demo.html">Demo Applet</a> - a simple demo of filtering, sorting and custom rendering.
   <li><a href="/sightings/index.html">Sightings</a> - screenshots of applications using Glazed Lists.
 </ul>
 
